Revert software vulnerabilities search

--- a/frontend/pages/hosts/details/cards/Software/_styles.scss
+++ b/frontend/pages/hosts/details/cards/Software/_styles.scss
@@ -6,7 +6,7 @@
     table-layout: fixed;
 
     th {
-      &:first-child(2) {
+      &:first-child {
         width: 25%;
         padding-right: 0px;
       }
