Host Details Page: Software vulnerability column (#4836)

--- a/frontend/pages/hosts/details/cards/Software/_styles.scss
+++ b/frontend/pages/hosts/details/cards/Software/_styles.scss
@@ -1,14 +1,12 @@
 .section--software {
+  .table-container__search-input {
+    width: 411px;
+  }
   .data-table__table {
     table-layout: fixed;
 
     th {
       &:first-child {
-        border-right: none;
-        width: 16px;
-        padding-right: 0px;
-      }
-      &:nth-child(2) {
         width: 25%;
         padding-right: 0px;
       }
@@ -20,20 +18,9 @@
       &.source__header {
         width: 20%;
       }
-
-      &.version__header {
-        border-right: 0;
-      }
     }
 
     tr {
-      td {
-        position: relative;
-        &:first-child {
-          padding-right: 0px;
-        }
-      }
-
       .software-link {
         visibility: hidden;
         img {
@@ -97,5 +84,8 @@
       padding-left: $pad-large;
       font-size: $small !important;
     }
+  }
+  .text-muted {
+    color: $ui-fleet-black-50;
   }
 }
